# XRF_analysis

./: .gitignore  README.md  pyproject.toml
data/: 20220317_take01_Pb210_1523count.csv  20220318_take01_Cu29.csv  20220318_take02_Cu29.csv  20220322_take01_Cs137.csv  20220322_take02_Cs137.csv  20220323_take03_Cs137.csv  20220324_take01_Cu29.csv  20220324_take02_Cu29.csv  20220325_Cu29_no_xray.csv  20220325_fastSDD_Cu29_no_xray.csv  20220325_fastSDD_Cu29_xray.csv  20220325_gain11.5_Cu29_no_xray.csv  20220325_gain11_Cu29_xray.csv  20220325_gain12_cardboard_no_xray.csv  20220325_gain12_no_sample_no_xray.csv  20220325_gain13.5_Cu29_no_xray.csv  20220325_gain13_Cu29_no_xray.csv  20220325_gain13_Cu29_xray.csv  20220325_gain13_cardboard_no_xray.csv  20220325_gain15_cardboard_no_xray.csv  20220325_gain15_no_sample_no_xray.csv  20220325_gain30_Cu29_no_xray.csv  20220325_take01_no_sample.csv  20220330_au_run1.csv  20220330_cs137_run1.csv  20220330_cu_run1.csv  20220330_pb210_run1.csv  20220330_pb_run1.csv  20220331_ag_high_rate.csv  20220331_ag_run1.csv  20220331_cd_run1.csv  20220331_cs137_high_rate.csv  20220331_ni_run1.csv  20220331_se_run1.csv  20220331_ti_high_rate.csv  20220401_1600s_chinese_coin.csv  20220401_1800s_canadian_coin.csv  20220401_1964_canadian_quarter.csv  20220401_2000s_chinese_dime.csv
src/: calib_pb210.py  calibration.py  coins.py  metals.py  metals_fit.py  metals_self_calib.py
src/early_stuff/: calib_pb210.py
src/xrf/: calib.py  calibration.py
