[tool.poetry]
name = "xrf_analysis"
version = "0.1.0"
description = "Data analysis for my Advanced Physics Lab x-ray fluorescence experiment."
authors = ["Shiqi Xu"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^2.17.0"
pylint = "^2.13.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
